src/content/docs/versions/http-api/0.4.x/outputs/whip.mdx
---
title: WHIP
hide_table_of_contents: true
slug: http-api/0.4.x/http-api/outputs/whip
---

import { Code } from "@astrojs/starlight/components";
import CollapsibleDetails from "@components/CollapsibleDetails.astro";

An output type that allows streaming video and audio from Smelter over WHIP.

## Usage

To use WHIP Output you must register it first. You can do it by sending a request like this:

<CollapsibleDetails summaryTitle="Example request" open>
  ```http
  POST: /api/output/:output_id/register
  Content-Type: application/json

  {
    "type": "whip",
    "endpoint_url": "https://example.com/whip",
    "bearer_token": "<TOKEN>",
    "video": {
      "resolution": { "width": 1280, "height": 720 },
      "encoder": { "type": "ffmpeg_h264" },
      "initial": {
        "root": {
          "type": "view",
        }
      }
    },
    "audio": {
      "encoder": { "type": "opus", "channels": "stereo" },
      "initial": {
        "inputs": [{ "input_id": "input_1", "volume": 1 }]
      }
    }
  }
  ```
</CollapsibleDetails>

## Reference

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type WhipOutput = {
    type: "whip";
    endpoint_url: string;
    bearer_token?: string;
    video?: WhipVideoOptions;
    audio?: WhipAudioOptions;
  };
  ```
</CollapsibleDetails>

Parameters for an WHIP output stream from Smelter.

## Properties

### endpoint\_url

The destination URL for sending media streams using the WHIP.

* **Type**: `string`

### bearer\_token

Token used for authentication when connecting to the WHIP endpoint.

* **Type**: `string`

### video

Parameters of a video included in the WHIP stream.

* **Type**: [`VideoOptions`](#whipvideooptions)

***

### audio

Parameters of an audio included in the WHIP stream.

* **Type**: [`WhipAudioOptions`](#whipaudiooptions)

## WhipVideoOptions

Parameters of a video source included in the WHIP stream.

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type WhipVideoOptions = {
  resolution: {
    width: u32;
    height: u32;
  };
  send_eos_when?: OutputEndCondition;
  encoder: WhipVideoEncoderOptions;
  initial: { root: Component; };
};
`}
    lang="tsx"
  />
</CollapsibleDetails>

### Properties

#### resolution

Output resolution in pixels.

* **Type**: `{ width: number; height: number; }`

***

#### send\_eos\_when

Condition for termination of the output stream based on the input streams states. If output includes both audio and video streams, then EOS needs to be sent for every type.

* **Type**: [`OutputEndCondition`](#outputendcondition)

***

#### encoder

Video encoder options.

* **Type**: [`WhipVideoEncoderOptions`](#whipvideoencoderoptions)

***

#### initial

Root of a component tree/scene that should be rendered for the output.

* **Type**: `{ root: Component; }`

## WhipVideoEncoderOptions

Configuration for the video encoder, based on the selected codec.

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type WhipVideoEncoderOptions = {
  type: "ffmpeg_h264";
  preset: 
  | "ultrafast"
  | "superfast"
  | "veryfast"
  | "faster"
  | "fast"
  | "medium"
  | "slow"
  | "slower"
  | "veryslow"
  | "placebo";
  ffmpeg_options?: Record<string, string>;
}
`}
    lang="tsx"
  />
</CollapsibleDetails>

### Properties (type: “ffmpeg\_h264”)

#### preset

Video output encoder preset. Visit <a href="https://trac.ffmpeg.org/wiki/Encode/H.264#Preset" target="_blank">FFmpeg docs</a> to learn more.

* **Type**: `"ultrafast" | "superfast" | "veryfast" | "faster" | "fast" | "medium" | "slow" | "slower" | "veryslow" | "placebo"`
* **Default value**: `fast`
* **Supported values**:
  * `ultrafast`
  * `superfast`
  * `veryfast`
  * `faster`
  * `fast`
  * `medium`
  * `slow`
  * `slower`
  * `veryslow`
  * `placebo`

***

#### ffmpeg\_options

Raw FFmpeg encoder options. Visit <a href="https://ffmpeg.org/ffmpeg-codecs.html" target="_blank">FFmpeg docs</a> to learn more.

* **Type**: `Record<string, string>`

## WhipAudioOptions

Parameters of an audio source included in the WHIP stream.

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type WhipAudioOptions = {
  mixing_strategy?: "sum_clip" | "sum_scale";
  send_eos_when?: OutputEndCondition;
  encoder: WhipAudioEncoderOptions;
  initial: { inputs: InputAudio[]; };
}
`}
    lang="tsx"
  />
</CollapsibleDetails>

### Properties

#### mixing\_strategy

Specifies how audio should be mixed.

* **Type**: `"sum_clip" | "sum_scale"`
* **Default value**: `"sum_clip"`
* **Supported values**:
  * `sum_clip` - First, the input samples are summed. If the result exceeds the i16 PCM range, it is clipped.
  * `sum_scale` - First, the input samples are summed. If the result exceeds the i16 PCM range, the summed samples are scaled down by a factor to fit within the range.

***

#### send\_eos\_when

Condition for termination of the output stream based on the input streams states. If output includes both audio and video streams, then EOS needs to be sent for every type.

* **Type**: [`OutputEndCondition`](#outputendcondition)

***

#### encoder

Audio encoder options.

* **Type**: [`WhipAudioEncoderOptions`](#whipaudioencoderoptions)

***

#### initial

Initial audio mixer configuration for output.

* **Type**: `{ inputs: InputAudio[]; }`

## WhipAudioEncoderOptions

Configuration for the audio encoder, based on the selected codec.

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type WhipAudioEncoderOptions = {
  type: "opus";
  channels: "mono" | "stereo";
  preset?: "quality" | "voip" | "lowest_latency";
  sample_rate?: u32
}
`}
    lang="tsx"
  />
</CollapsibleDetails>

### Properties(type: "opus")

#### channels

Channels configuration

* **Type**: `"mono" | "stereo"`
* **Supported values**:
  * `mono` - Mono audio (single channel).
  * `stereo` - Stereo audio (two channels).

***

#### preset

Audio output encoder preset.

* **Type**: `"quality" | "voip" | "lowest_latency"`
* **Default value**: `voip`
* **Supported values**:
  * `quality` - Recommended for broadcast and high-fidelity applications requiring decoded audio to maintain maximum fidelity to the input signal.
  * `voip` - Recommended for VoIP and videoconferencing applications, prioritizing listening quality and speech intelligibility.
  * `lowest_latency` - Recommended **only** when achieving the lowest possible latency is the highest priority.

#### sample\_rate

Sample rate for audio encoder.

* **Type**: `u32`
* **Default value**: `48000`
* **Supported values**: `8000`, `16000`, `24000`, `48000`.

## InputAudio

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type InputAudio = {
  input_id: string;
  volume?: f32;
}
`}
    lang="tsx"
  />
</CollapsibleDetails>

### Properties

#### input\_id

ID of an input. It identifies a stream registered using a [register input](/http-api/0.4.x/routes#register-input) method.

* **Type**: `string`

#### volume

Input volume in range `[0, 1]`

* **Type**: `f32`
* **Default value**: `1.0`
* **Supported values**: `[0, 1]`

## OutputEndCondition

Defines when the output stream should end based on the state of the input streams. Only one of the nested fields can be set at a time.

By default, the input stream is considered finished/ended when:

* TCP connection was dropped/closed.
* RTCP Goodbye packet (BYE) was received.
* MP4 track has ended.
* Input was unregistered already (or never registered).

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type OutputEndCondition = 
  | { any_of: string[]; }
  | { all_of: string[]; }
  | { any_input: bool; }
  | { all_inputs: bool; };
`}
    lang="tsx"
  />
</CollapsibleDetails>

### Properties

#### any\_of

List of the input streams. The output stream will terminate if any stream in the list finishes.

* **Type**: `string[]`

***

#### all\_of

List of the input streams. The output stream will terminate when all streams in the list finish.

* **Type**: `string[]`

***

#### any\_input

Terminate the output stream if any of the input streams end, including streams added after the output was registered. Notably, the output stream will not terminate if no inputs were ever connected.

* **Type**: `bool`

***

#### all\_inputs

Terminate the output stream only when all input streams have finished. Notably, the output stream will terminate if no inputs were ever connected.

* **Type**: `bool`
